- better precision on line crossing (use depth boundaries to calculate mid position) - improve lighting behavior on DIVE strategy (don't switch on anymore if a nearby creatures were already scan by me) - increase absoluteDanger detection from 600u to 650u - add radar wasVisible to potentialDanger - add radar creatures to otherPotential - increase filter detection by 50u in the azimuth filtering - increase KILL detection from KILL_DISTANCE to 800u